<resources>
    <string name="application_name">Chat33</string>
    <string name="app_name">Chat33模块</string>
    <string name="qr_code_friend_tips">扫描二维码加我%1$s好友</string>
    <string name="qr_code_group_tips">扫描二维码加我%1$s群</string>
    <string name="search_my_account">我的账号：%1$s</string>
    <string name="user_info_uid">UID %1$s</string>
    <string name="user_info_account">帐号 %1$s</string>
    <string name="room_id">群号 %1$s</string>
    <string name="room_member_num">群成员 %1$d</string>
    <string name="room_member_num_total">共%1$d人</string>
    <string name="room_member_name_tips">在这里可以设置你在 &lt;font color="#61C7FF"&gt;%1$s&lt;/font&gt; 的昵称，这个昵称只会在此群内显示</string>
    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <string name="toolong">录音时间过长</string>
    <string name="forward_count">聊天记录 共%1$d条</string>
    <string name="room_disable_tips">该群聊已被查封至%1$s，如需解封可联系客服：微信号zhaobikefu</string>
    <string name="room_disable_forever_tips">该群聊已被永久查封，如需解封可联系客服：微信号zhaobikefu</string>
    <string name="label_share">分享到Chat33</string>
    <string name="chat_tips_unknown_error">未知错误</string>
    <string name="chat_tips_tips">提示</string>
    <string name="chat_action_confirm">确定</string>
    <string name="chat_action_cancel">取消</string>
    <string name="chat_action_set">设置</string>
    <string name="chat_action_update">更新</string>
    <string name="chat_action_ack">知道了</string>
    <string name="chat_action_delete">删除</string>
    <string name="chat_action_choose">选择</string>
    <string name="chat_action_invite">邀请</string>
    <string name="chat_action_remove">移除</string>
    <string name="chat_action_share">分享</string>
    <string name="chat_update_cancel">稍后更新</string>
    <string name="chat_update">立即更新</string>
    <string name="chat_date_pattern">yyyy年MM月dd日HH时mm分</string>
    <string name="chat_permission_storage">没有存储访问权限，功能无法使用</string>
    <string name="chat_permission_record">没有录音权限，功能无法使用</string>
    <string name="chat_permission_universal">没有权限，功能无法使用</string>
    <string name="chat_msg_send_from_me">我</string>
    <string name="chat_splash_tips">区块链聊天应用</string>
    <string name="chat_main_message">消息</string>
    <string name="chat_main_wallet">钱包</string>
    <string name="chat_main_contact">通讯录</string>
    <string name="chat_main_mime">我的</string>
    <string name="chat_main_tips1">已退出群聊</string>
    <string name="chat_main_tips2">您已被移除群聊</string>
    <string name="chat_main_tips3">群聊已解散</string>
    <string name="chat_main_tips4">好友已删除</string>
    <string name="chat_main_tips5">昵称不能为空</string>
    <string name="chat_main_tips6">修改成功</string>
    <string name="chat_tips_search_history">搜索历史</string>
    <string name="chat_tips_search_clear_history">清空历史</string>
    <string name="chat_tips_search_hint">搜索好友、群、聊天记录等</string>
    <string name="chat_tips_search_hint1">搜索好友</string>
    <string name="chat_tips_search_hint2">搜索群</string>
    <string name="chat_tips_search_hint3">搜索聊天记录</string>
    <string name="chat_tips_search_type1">联系人</string>
    <string name="chat_tips_search_type2">群聊</string>
    <string name="chat_tips_search_type3">聊天记录</string>
    <string name="chat_tips_search_result_more">查看更多</string>
    <string name="chat_tips_search_log_target">\"%1$s\"的记录</string>
    <string name="chat_tips_search_log_count">%1$d条相关聊天记录</string>
    <string name="chat_tips_identification">认证信息：&lt;font color="%1$s"&gt;去认证&#xe7e4;&lt;/font&gt;</string>
    <string name="chat_tips_identification_tip1">认证信息：</string>
    <string name="chat_tips_identification_tip2">认证信息：%1$s</string>
    <string name="chat_tips_identification_tip3">认证信息：%1$s&#xe7e4;</string>
    <string name="chat_title_add_verify1">好友验证</string>
    <string name="chat_title_add_verify2">入群验证</string>
    <string name="chat_tips_verify1">你需要发送验证申请，等待对方通过</string>
    <string name="chat_tips_verify2">验证申请</string>
    <string name="chat_tips_verify3">我是&#160;%1$s</string>
    <string name="chat_tips_verify4">验证申请已提交</string>
    <string name="chat_tips_verify5">已发送入群申请</string>
    <string name="chat_action_verify_send">发送</string>
    <string name="chat_title_admin_set">管理员设置</string>
    <string name="chat_tips_room_master">群主</string>
    <string name="chat_tips_admin_num">管理员(%1$d/10)</string>
    <string name="chat_tips_add_admin">添加管理员成功</string>
    <string name="chat_action_add_admin">添加管理员</string>
    <string name="chat_tips_shoot">拍摄</string>
    <string name="chat_tips_choose_from">从相册选择</string>
    <string name="chat_tips_no_more_msg">没有更多了</string>
    <string name="chat_tips_room_notification">公告消息</string>
    <string name="chat_tips_new_msg">%1$s条新消息</string>
    <string name="chat_tips_chat_operate1">解除禁言成功</string>
    <string name="chat_tips_chat_operate2">已切换为听筒模式</string>
    <string name="chat_tips_chat_operate3">已切换为扬声器模式</string>
    <string name="chat_tips_chat_operate4">已复制到剪贴板</string>
    <string name="chat_tips_chat_operate5">非文本信息不可复制</string>
    <string name="chat_tips_chat_operate6">已撤回一条消息</string>
    <string name="chat_action_forward_single">逐条转发</string>
    <string name="chat_action_forward_multiple">合并转发</string>
    <string name="chat_action_msg_star">收藏</string>
    <string name="chat_action_msg_delete">删除</string>
    <string name="chat_dialog_delete">确认删除</string>
    <string name="chat_tip_packet_share_title">【Chat33】好友送你%1$s大红包</string>
    <string name="chat_tip_packet_share_content">Chat33是一款基于区块链技术的聊天应用，可发送比特元BTY等数字资产！</string>
    <string name="chat_tip_choose_msg1">请选择要删除的消息</string>
    <string name="chat_tip_choose_msg2">请选择要转发的消息</string>
    <string name="chat_dialog_set_encrypt_key">你尚未设置密聊私钥，无法在加密群聊发送消息，请先设置密聊私钥</string>
    <string name="chat_dialog_update_group_key">你的群聊密钥不存在，需要更新后才能发送加密消息</string>
    <string name="chat_tips_input_msg1">不能发送空白信息</string>
    <string name="chat_tips_input_msg2">系统消息只能发文本信息</string>
    <string name="chat_tips_input_msg3">未检测到SD卡</string>
    <string name="chat_tips_input_send">发送</string>
    <string name="chat_tips_input_say_sth">想说点什么</string>
    <string name="chat_tips_input_red_packet">红包</string>
    <string name="chat_tips_input_media">图片/视频</string>
    <string name="chat_tips_input_shoot">拍摄</string>
    <string name="chat_tips_input_snap_msg">阅后即焚</string>
    <string name="chat_tips_input_file">文件</string>
    <string name="chat_tips_input_text_packet">红包消息</string>
    <string name="chat_tips_input_transfer">转账</string>
    <string name="chat_tips_input_receipt">收款</string>
    <string name="chat_tips_input_card">名片</string>
    <string name="chat_title_chat_file">聊天文件</string>
    <string name="chat_tips_file">文件</string>
    <string name="chat_tips_media">图片/视频</string>
    <string name="chat_action_msg_download">下载</string>
    <string name="chat_tips_chat_file1">请选择要下载的文件</string>
    <string name="chat_tips_chat_file2">正在下载文件到%1$s</string>
    <string name="chat_tips_chat_file3">请选择要删除的文件</string>
    <string name="chat_tips_chat_file4">请选择要转发的消息</string>
    <string name="chat_tips_chat_file5">有%1$d个文件删除失败！除群主和管理员外，只能删除自己上传的文件</string>
    <string name="chat_tips_chat_file6">文件已上传</string>
    <string name="chat_tips_chat_file7">文件不存在</string>
    <string name="chat_tips_chat_file8">文件大小不能超过100M</string>
    <string name="chat_tips_chat_file9">文件发送失败,请重新选择</string>
    <string-array name="chat_choose_delete_file">
        <item>从聊天文件删除</item>
        <item>从本设备中删除</item>
        <item>取消</item>
    </string-array>
    <string name="chat_tips_msg_not_exist">消息不存在</string>
    <string name="chat_tips_already_dismiss">已解散</string>
    <string name="chat_tips_no_name">无名称</string>
    <string name="chat_tips_encrypted_file">无法解密的文件</string>
    <string name="chat_tips_search_chat_file">文件名/上传者</string>
    <string name="chat_tips_start_download">开始下载…</string>
    <string name="chat_tips_downloading">正在下载中…</string>
    <string name="chat_tips_file_download_success">文件已下载成功</string>
    <string name="chat_tips_file_download_to">文件已下载至%1$s</string>
    <string name="chat_tips_video_download_success">视频已下载成功</string>
    <string name="chat_tips_video_download_to">视频已下载至%1$s</string>
    <string name="chat_tips_file_downloading_to">正在下载文件到%1$s</string>
    <string name="chat_tips_file_download_fail">文件下载失败</string>
    <string name="chat_tips_video_download_fail">视频下载失败</string>
    <string name="chat_title_user_chat_file">%1$s的文件</string>
    <string name="chat_tips_delete_not_permitted">有%1$d个文件删除失败！除群主和管理员外，只能删除自己上传的文件</string>
    <string name="chat_title_contact_select">选择联系人</string>
    <string name="chat_tips_recent">最近联系</string>
    <string name="chat_tips_friends">好友</string>
    <string name="chat_tips_rooms">群聊</string>
    <string name="chat_tips_chat_rooms">聊天室</string>
    <string name="chat_tips_contact_select1">转发完成</string>
    <string name="chat_tips_contact_select2">请选择要转发的人</string>
    <string name="chat_tips_contact_select3">转发的好友/群聊中包含%1$d个禁言、解除关系、黑名单的好友/群聊，无法收到转发的消息</string>
    <string name="chat_tips_contact_select4">图片发送失败,请重新选择</string>
    <string name="chat_tips_contact_select5">发送失败,请重新选择</string>
    <string name="chat_tips_img_saved">图片已保存</string>
    <string name="chat_tips_img_not_exist">图片不存在</string>
    <string name="chat_tips_img_zip_fail">图片压缩失败</string>
    <string name="chat_title_create_group1">创建群聊</string>
    <string name="chat_title_create_group2">添加新成员</string>
    <string name="chat_action_group_create">创建</string>
    <string name="chat_action_group_skip">跳过</string>
    <string name="chat_action_group_add_member">添加</string>
    <string name="chat_dialog_create_group_set_key">你尚未设置密聊私钥，无法创建加密群聊，请先设置密聊私钥</string>
    <string name="chat_action_continue_group_create">继续创建</string>
    <string name="chat_action_continue_group_invite">继续邀请</string>
    <string name="chat_tips_create_group1">有%1$d个成员未开启加密功能，无法加入加密群聊，继续创建将去除该部分成员。</string>
    <string name="chat_tips_create_group2">创建成功</string>
    <string name="chat_tips_create_group3">请选择邀请的人</string>
    <string name="chat_tips_create_group4">有%1$d个好友未开启加密功能，无法加入加密群聊，继续邀请将去除该部分好友。</string>
    <string name="chat_tips_create_group5">邀请成功</string>
    <string name="chat_tips_edit_group_empty">群名不能为空</string>
    <string name="chat_title_edit_avatar">头像</string>
    <string name="chat_tips_edit_success">修改成功</string>
    <string name="chat_tips_pic_upload_fail">图片上传失败,请重新选择</string>
    <string-array name="chat_choose_edit_avatar">
        <item>拍照</item>
        <item>从相册选择</item>
        <item>保存图片</item>
        <item>取消</item>
    </string-array>
    <string name="chat_action_member_operate2">禁言</string>
    <string name="chat_search_friend_hint">搜索好友</string>
    <string name="chat_mute_cancel">取消禁言</string>
    <string name="chat_top_cancel">取消置顶</string>
    <string name="chat_disturb_cancel">取消免打扰</string>
    <string name="chat_copy">复制</string>
    <string name="chat_thumb">点赞</string>
    <string name="chat_reward">打赏</string>
    <string name="chat_revoke">撤回</string>
    <string name="chat_forward">转发</string>
    <string name="chat_disable_mute">解除禁言</string>
    <string name="chat_speak_communication_mode">开启听筒模式</string>
    <string name="chat_speak_normal_mode">开启扬声器模式</string>
    <string name="chat_multi_select">多选</string>
    <string name="chat_select_mute_time">选择禁言时间</string>
    <string name="chat_forever">永远</string>
    <string name="chat_24_hour">24小时</string>
    <string name="chat_10_hour">10小时</string>
    <string name="chat_2_hour">2小时</string>
    <string name="chat_30_minute">30分钟</string>
    <string name="chat_10_minute">10分钟</string>
    <string name="chat_set_admin">设置管理员</string>
    <string name="chat_member_delete">删除成员</string>
    <string name="chat_message_delete">删除聊天</string>
    <string name="chat_add_room_helper">加入群助手</string>
</resources>