<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:background="@drawable/img_operate"
    android:orientation="vertical"
    android:layout_marginEnd="49dp"
    android:layout_marginTop="25dp" >

    <TextView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/basic_sl_btn"
        android:gravity="center"
        android:text="@string/chat_top_cancel"
        android:textColor="@color/chat_text_grey_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/basic_sl_btn"
        android:gravity="center"
        android:text="@string/chat_message_delete"
        android:textColor="@color/chat_text_grey_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/disturb"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/basic_sl_btn"
        android:gravity="center"
        android:text="@string/chat_disturb_cancel"
        android:textColor="@color/chat_text_grey_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/assistant"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/basic_sl_btn"
        android:gravity="center"
        android:text="@string/chat_add_room_helper"
        android:textColor="@color/chat_text_grey_dark"
        android:textSize="16sp" />
</LinearLayout>