<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:background="@drawable/img_operate"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/basic_sl_btn"
        android:gravity="center"
        android:text="@string/chat_title_create_group2"
        android:textColor="@color/chat_text_grey_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/set"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/basic_sl_btn"
        android:gravity="center"
        android:text="@string/chat_set_admin"
        android:textColor="@color/chat_text_grey_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/basic_sl_btn"
        android:gravity="center"
        android:text="@string/chat_member_delete"
        android:textColor="@color/chat_text_grey_dark"
        android:textSize="16sp"
        android:visibility="gone" />
</LinearLayout>