<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chat_color_status_bg"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/chat_action_cancel"
            android:textColor="@color/chat_color_accent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/chat_title_contact_select"
            android:textColor="@color/chat_color_title"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            app:srcCompat="@drawable/icon_home_search" />

        <com.fzm.chat33.widget.ChatSearchView
            android:id="@+id/chat_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            app:hint="@string/chat_search_friend_hint"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_selected"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/rl_title">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_select"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:overScrollMode="never" />

        <TextView
            android:id="@+id/tv_select_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:text="0"
            android:textColor="@color/chat_color_accent"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_confirm"
        android:layout_below="@+id/ll_selected"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_tab"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_often"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:gravity="center"
                android:text="@string/chat_tips_recent"
                android:textColor="@color/chat_text_grey_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_friend"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:gravity="center"
                android:text="@string/chat_tips_friends"
                android:textColor="@color/chat_text_grey_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_group"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:gravity="center"
                android:text="@string/chat_tips_rooms"
                android:textColor="@color/chat_text_grey_light"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_confirm"
        android:layout_below="@+id/ll_selected"
        android:background="@color/white"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/rl_confirm"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginRight="-10dp"
        android:layout_marginBottom="-10dp"
        android:background="@drawable/img_operate"
        android:padding="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_round_textblue_solid_20"
            android:gravity="center"
            android:text="@string/chat_action_confirm"
            android:textColor="@color/chat_white" />
    </RelativeLayout>
</RelativeLayout>
